src/objects/FamilyMember__c.object
<CustomObject>
    <fields>
        <fullName>FamilyRole__c</fullName>
        <label>Family Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boss</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Caporegime</fullName>
                </value>
                <value>
                    <fullName>Consiglieri</fullName>
                </value>
                <value>
                    <fullName>Underboss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Family Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>FamilyRole__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Family Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>